--- a/src/game/gui/application.css
+++ b/src/game/gui/application.css
@@ -1,37 +1,17 @@
-.button {
-    color: #FFF;
-    transition: all 0.5s;
-    position: relative;
-  }
-.button::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    background-color: rgba(255,255,255,0.1);
-    transition: all 0.3s;
+#startGame, #credits, #quitGame {
+    -fx-text-fill: #FFF;
+    -fx-background-color: transparent;
+    -fx-border-color: rgba(255,255,255,0.5);
+    -fx-border-width: 3px;
+    -fx-border-style: solid;
+    -fx-position: relative;
+    -fx-font-family: "Oswald";
+
 }
-.button:hover::before {
-    opacity: 0 ;
-    transform: scale(0.5,0.5);
+
+#Title{
+    -fx-text-fill: #FFF;
+    -fx-font-family: "Oswald";
+    -fx-font-size: 150px ;
+    -fx-font-style: italic;
 }
-.button::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    opacity: 0;
-    transition: all 0.3s;
-    border: 1px solid rgba(255,255,255,0.5);
-    transform: scale(1.2,1.2);
-  }
-  .button:hover::after {
-    opacity: 1;
-    transform: scale(1,1);
-  }
