--- a/src/game/gui/MainMenuScene.fxml
+++ b/src/game/gui/MainMenuScene.fxml
@@ -2,15 +2,16 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.media.MediaView?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="scenePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.gui.mainController">
    <!-- Add MediaView for the background video -->
-   <MediaView fx:id="backgroundVideo" fitWidth="1920.0" fitHeight="1080.0"/>
-
    <children>
+      <MediaView fx:id="backgroundVideo" fitHeight="1080.0" fitWidth="1920.0" />
       <Label fx:id="Title" alignment="CENTER" layoutY="100.0" prefHeight="89.0" prefWidth="1919.0" text="Attack On Titans : Utopia">
          <font>
             <Font size="61.0" />
@@ -18,18 +19,31 @@
       </Label>
       <Button fx:id="startGame" layoutX="724.0" layoutY="424.0" mnemonicParsing="false" prefHeight="87.0" prefWidth="508.0" text="New Game">
          <font>
-            <Font size="41.0" />
+            <Font size="48.0" />
          </font>
       </Button>
       <Button fx:id="credits" layoutX="724.0" layoutY="593.0" mnemonicParsing="false" prefHeight="87.0" prefWidth="508.0" text="Credits">
          <font>
-            <Font size="41.0" />
+            <Font size="48.0" />
          </font>
       </Button>
       <Button fx:id="quitGame" layoutX="724.0" layoutY="762.0" mnemonicParsing="false" onAction="#exitGame" prefHeight="87.0" prefWidth="508.0" text="Quit">
          <font>
-            <Font size="41.0" />
+            <Font size="48.0" />
+         </font>
+      </Button>
+      <Button id="muteButton" fx:id="muteButton" layoutX="70.0" layoutY="50.0" mnemonicParsing="false" onAction="#mute" prefHeight="83.0" prefWidth="240.0" text="Mute">
+         <graphic>
+            <ImageView fitHeight="75.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@volume.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <font>
+            <Font size="38.0" />
          </font>
       </Button>
    </children>
+   
 </AnchorPane>
