--- a/src/game/gui/application.css
+++ b/src/game/gui/application.css
@@ -10,6 +10,13 @@
     -fx-font-size: 30px;
 }
 
+
+#startGame:hover, #startGame:focused,
+#credits:hover, #credits:focused,
+#quitGame:hover, #quitGame:focused {
+    -fx-font-size: 50px; /* Adjust the font size to your desired value */
+}
+
 #Title{
     -fx-text-fill: #FFF;
     -fx-font-family: "Oswald";
