Finished New Game menu

--- a/src/game/gui/application.css
+++ b/src/game/gui/application.css
@@ -1,4 +1,4 @@
-#backButton, #muteButton, #startGame, #credits, #quitGame {
+#backButton, #muteButton, #startGame, #credits, #quitGame, #easyButton, #hardButton, #instructionsButton, #close {
     -fx-text-fill: #FFF;
     -fx-background-color: transparent;
     -fx-border-color: rgba(255,255,255,0.5);
@@ -6,14 +6,21 @@
     -fx-text-size: 50px;
     -fx-font-family: "Oswald";
 }
-#muteButton, #backButton{
+#muteButton, #backButton, #close{
     -fx-font-size: 30px;
 }
 
+#backButton:hover, #close:hover{
+    -fx-font-size: 30px;
+    -fx-effect: dropshadow(three-pass-box, #FFF, 10, 0, 0, 0);
+}
 
 #startGame:hover, #startGame:focused,
 #credits:hover, #credits:focused,
-#quitGame:hover, #quitGame:focused {
+#quitGame:hover, #quitGame:focused ,
+#easyButton:hover, #easyButton:focused,
+#hardButton:hover, #hardButton:focused,
+#instructionsButton:hover, #instructionsButton:focused {
     -fx-font-size: 50px;
     -fx-effect: dropshadow(three-pass-box, #FFF, 10, 0, 0, 0);
 }
@@ -23,6 +30,7 @@
     -fx-font-family: "Oswald";
     -fx-font-size: 150px ;
     -fx-font-style: italic;
+    -fx-effect: dropshadow(three-pass-box, #FFF, 10, 0, 0, 0);
 }
 #textBox1, #textBox2{
     -fx-text-fill: #FFF;
@@ -31,28 +39,40 @@
     -fx-font-style: italic;
 }
 
+#instructionsTitle{
+    -fx-text-fill: #FFF;
+    -fx-font-family: "Oswald";
+    -fx-font-size: 50px ;
+}
+
+#instructionsText{
+    -fx-text-fill: #FFF;
+    -fx-font-family: "Oswald";
+    -fx-font-size: 16px ;
+}
+
 .exitDialog {
-    -fx-background-color: #ffffff; /* Set background color to white /
+    -fx-background-color: #ffffff; 
 }
 
 .exitDialog > .button-bar > .container {
-    -fx-background-color: #ffffff; / Set button bar background color to white /
+    -fx-background-color: #ffffff; 
 }
 
 .exitDialog > .label.content {
     -fx-font-size: 14px;
     -fx-font-weight: bold;
-    -fx-text-fill: #292929; / Set text color to dark gray /
+    -fx-text-fill: #292929; 
 }
 
 .exitDialog:header > .header-panel {
-    -fx-background-color: #ffffff; / Set header panel background color to white /
+    -fx-background-color: #ffffff; 
 }
 
 .exitDialog:header > .header-panel > .label {
     -fx-font-size: 18px;
     -fx-font-style: italic;
-    -fx-text-fill: #292929; / Set header text color to dark gray */
+    -fx-text-fill: #292929; 
 }
 
 .exitDialog .alert-icon {
