--- a/src/game/gui/MainMenuScene.fxml
+++ b/src/game/gui/MainMenuScene.fxml
@@ -17,7 +17,7 @@
             <Font size="61.0" />
          </font>
       </Label>
-      <Button fx:id="startGame" layoutX="724.0" layoutY="424.0" mnemonicParsing="false" prefHeight="87.0" prefWidth="508.0" text="New Game">
+      <Button fx:id="startGame" layoutX="724.0" layoutY="424.0" mnemonicParsing="false" onAction="#goToNewGame" prefHeight="87.0" prefWidth="508.0" text="New Game">
          <font>
             <Font size="48.0" />
          </font>
