--- a/src/game/gui/GameScene.fxml
+++ b/src/game/gui/GameScene.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fx:id="MainBackground" fitHeight="826.0" fitWidth="1922.0" layoutY="132.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="MainBackground" fitHeight="826.0" fitWidth="1922.0" layoutX="194.0" layoutY="119.0" pickOnBounds="true" preserveRatio="true" scaleX="1.35" scaleY="1.35">
          <image>
             <Image url="@assets/MainBackground.png" />
          </image>
@@ -41,11 +42,6 @@
             <Image url="@assets/Houses.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="WeaponShop" fitHeight="132.0" fitWidth="437.0" layoutX="-3.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@assets/WeaponShop.png" />
-         </image>
-      </ImageView>
       <ImageView fx:id="Wall21111" fitHeight="199.0" fitWidth="94.0" layoutX="686.0" layoutY="723.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@assets/wallLast.png" />
@@ -76,5 +72,11 @@
             <Image url="@assets/wallLast.png" />
          </image>
       </ImageView>
+      <ImageView fx:id="Lane11" fitHeight="150.0" fitWidth="1875.0" pickOnBounds="true" preserveRatio="true" scaleX="1.05" scaleY="1.05">
+         <image>
+            <Image url="@assets/TopViewMenu.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="PauseMenu" layoutX="1796.0" layoutY="20.0" mnemonicParsing="false" prefHeight="106.0" prefWidth="101.0" text="Button" />
    </children>
 </AnchorPane>
