--- a/src/game/gui/FXML/GameScene.fxml
+++ b/src/game/gui/FXML/GameScene.fxml
@@ -5,11 +5,10 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fx:id="MainBackground" fitHeight="826.0" fitWidth="1922.0" layoutX="194.0" layoutY="119.0" pickOnBounds="true" preserveRatio="true" scaleX="1.35" scaleY="1.35">
+      <ImageView fx:id="MainBackground" fitHeight="826.0" fitWidth="1922.0" layoutX="195.0" layoutY="119.0" pickOnBounds="true" preserveRatio="true" scaleX="1.35" scaleY="1.35">
          <image>
             <Image url="@../assets/MainBackground.png" />
          </image>
@@ -74,7 +73,7 @@
             <Image url="@../assets/wallLast.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="Lane11" fitHeight="150.0" fitWidth="1875.0" pickOnBounds="true" preserveRatio="true" scaleX="1.05" scaleY="1.05">
+      <ImageView fx:id="Lane11" fitHeight="190.0" fitWidth="1920.0" layoutY="-35.0" pickOnBounds="true" preserveRatio="true" scaleX="1.05" scaleY="1.05">
          <image>
             <Image url="@../assets/TopViewMenu.png" />
          </image>
@@ -85,94 +84,43 @@
             <Image url="@../assets/ButtomViewMenu.png" />
          </image>
       </ImageView>
-      <Button fx:id="purchaseSniperButton" layoutX="-10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="106.0" prefWidth="101.0" style="-fx-background-color: transparent;" stylesheets="@../application.css">
+      <Button fx:id="purchaseSniperButton" layoutX="-10.0" layoutY="30.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="73.0" style="-fx-background-color: transparent;" stylesheets="@../application.css">
          <graphic>
-            <ImageView fitHeight="98.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="80.0" fitWidth="73.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../assets/SniperCannonBuyIcon.png" />
                </image>
             </ImageView>
          </graphic>
       </Button>
-      <Button fx:id="PauseMenu11" layoutX="82.0" layoutY="10.0" mnemonicParsing="false" prefHeight="106.0" prefWidth="101.0" style="-fx-background-color: transparent;" stylesheets="@../application.css">
+      <Button fx:id="PauseMenu11" layoutX="130.0" layoutY="30.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="73.0" style="-fx-background-color: transparent;" stylesheets="@../application.css">
          <graphic>
-            <ImageView fx:id="purchasePiercingButton" fitHeight="98.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="purchasePiercingButton" fitHeight="80.0" fitWidth="73.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../assets/PiercingCannonBuyIcon.png" />
                </image>
             </ImageView>
          </graphic>
       </Button>
-      <Button fx:id="purchaseVolleyButton" layoutX="180.0" layoutY="10.0" mnemonicParsing="false" prefHeight="106.0" prefWidth="101.0" style="-fx-background-color: transparent;" stylesheets="@../application.css">
+      <Button fx:id="purchaseVolleyButton" layoutX="270.0" layoutY="30.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="73.0" style="-fx-background-color: transparent;" stylesheets="@../application.css">
          <graphic>
-            <ImageView fitHeight="98.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="80.0" fitWidth="73.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../assets/VolleySpreadCannonBuyIcon.png" />
                </image>
             </ImageView>
          </graphic>
       </Button>
-      <Button fx:id="purchaseTrapButton" layoutX="275.0" layoutY="10.0" mnemonicParsing="false" prefHeight="106.0" prefWidth="101.0" style="-fx-background-color: transparent;" stylesheets="@../application.css">
+      <Button fx:id="purchaseTrapButton" layoutX="410.0" layoutY="30.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="73.0" style="-fx-background-color: transparent;" stylesheets="@../application.css">
          <graphic>
-            <ImageView fitHeight="98.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="80.0" fitWidth="73.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../assets/WallTrapBuyIcon.png" />
                </image>
             </ImageView>
          </graphic>
       </Button>
-      <Label layoutX="25.0" layoutY="96.0" text="25">
-         <graphic>
-            <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../assets/ResourcesIcon.png" />
-               </image>
-            </ImageView>
-         </graphic>
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="115.0" layoutY="96.0" text="25">
-         <graphic>
-            <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../assets/ResourcesIcon.png" />
-               </image>
-            </ImageView>
-         </graphic>
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="212.0" layoutY="96.0" text="100">
-         <graphic>
-            <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../assets/ResourcesIcon.png" />
-               </image>
-            </ImageView>
-         </graphic>
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="307.0" layoutY="96.0" text="75">
-         <graphic>
-            <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../assets/ResourcesIcon.png" />
-               </image>
-            </ImageView>
-         </graphic>
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="5.0" text="Anti Titan Shell" />
-      <Label layoutX="95.0" text="Long Range Spear" />
-      <Label layoutX="193.0" text="Wall Spread Cannon" />
-      <Label layoutX="298.0" layoutY="-4.0" text="Proximity Trap" />
-      <Label alignment="CENTER" layoutX="717.0" layoutY="994.0" prefHeight="41.0" prefWidth="397.0" style="-fx-text-fill: #631E1E; -fx-font-family: Oswald; -fx-font-size: 35;" stylesheets="@../application.css" text=" Early (1)" />
+      <Label fx:id="phaseAndTurnText" alignment="CENTER" layoutX="717.0" layoutY="994.0" prefHeight="41.0" prefWidth="397.0" style="-fx-text-fill: #631E1E; -fx-font-family: Oswald; -fx-font-size: 35;" stylesheets="@../application.css" text=" Early (1)" />
+      <Label fx:id="resourcesGatheredText" layoutX="671.0" layoutY="18.0" prefHeight="71.0" prefWidth="281.0" style="-fx-font-family: Oswald; -fx-text-fill: #631E1E; -fx-font-size: 40;" stylesheets="@../application.css" text="00" />
    </children>
 </AnchorPane>
