--- a/src/game/gui/FXML/GameScene.fxml
+++ b/src/game/gui/FXML/GameScene.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fx:id="MainBackground" fitHeight="826.0" fitWidth="1922.0" layoutX="195.0" layoutY="119.0" pickOnBounds="true" preserveRatio="true" scaleX="1.35" scaleY="1.35">
          <image>
@@ -73,12 +73,11 @@
             <Image url="@../assets/wallLast.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="Lane11" fitHeight="190.0" fitWidth="1920.0" layoutY="-35.0" pickOnBounds="true" preserveRatio="true" scaleX="1.05" scaleY="1.05">
+      <ImageView fx:id="Lane11" fitHeight="190.0" fitWidth="1876.0" layoutY="-35.0" pickOnBounds="true" preserveRatio="true" scaleX="1.05" scaleY="1.05">
          <image>
             <Image url="@../assets/TopViewMenu.png" />
          </image>
       </ImageView>
-      <Button fx:id="PauseMenu" layoutX="1801.0" layoutY="2.0" mnemonicParsing="false" prefHeight="106.0" prefWidth="101.0" text="Button" />
       <ImageView fx:id="Lane111" fitHeight="150.0" fitWidth="1875.0" layoutX="194.0" layoutY="919.0" pickOnBounds="true" preserveRatio="true" scaleX="1.2659" scaleY="1.274">
          <image>
             <Image url="@../assets/ButtomViewMenu.png" />
@@ -121,6 +120,43 @@
          </graphic>
       </Button>
       <Label fx:id="phaseAndTurnText" alignment="CENTER" layoutX="717.0" layoutY="994.0" prefHeight="41.0" prefWidth="397.0" style="-fx-text-fill: #631E1E; -fx-font-family: Oswald; -fx-font-size: 35;" stylesheets="@../application.css" text=" Early (1)" />
-      <Label fx:id="resourcesGatheredText" layoutX="671.0" layoutY="18.0" prefHeight="71.0" prefWidth="281.0" style="-fx-font-family: Oswald; -fx-text-fill: #631E1E; -fx-font-size: 40;" stylesheets="@../application.css" text="00" />
+      <Label fx:id="resourcesGatheredText" layoutX="671.0" layoutY="18.0" prefHeight="71.0" prefWidth="281.0" style="-fx-font-family: Oswald; -fx-text-fill: #631E1E; -fx-font-size: 40;" stylesheets="@../application.css" text="0" />
+      <Button fx:id="purchaseSniperButton1" layoutX="1800.0" layoutY="13.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="73.0" style="-fx-background-color: transparent;" stylesheets="@../application.css">
+         <graphic>
+            <ImageView fitHeight="80.0" fitWidth="103.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assets/SettingsButton.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Label fx:id="resourcesGatheredText1" layoutX="1691.0" layoutY="21.0" prefHeight="71.0" prefWidth="0.0" style="-fx-font-family: Oswald; -fx-text-fill: #631E1E; -fx-font-size: 40;" stylesheets="@../application.css" text="00" />
+      <Button fx:id="purchaseSniperButton11" layoutX="1810.0" layoutY="23.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="73.0" style="-fx-background-color: transparent;" stylesheets="@../application.css">
+         <graphic>
+            <ImageView fitHeight="80.0" fitWidth="103.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assets/SettingsButton.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Button fx:id="purchaseSniperButton12" layoutX="1810.0" layoutY="23.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="73.0" style="-fx-background-color: transparent;" stylesheets="@../application.css">
+         <graphic>
+            <ImageView fitHeight="80.0" fitWidth="103.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assets/SettingsButton.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Button fx:id="purchaseSniperButton13" layoutX="1810.0" layoutY="23.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="73.0" style="-fx-background-color: transparent;" stylesheets="@../application.css">
+         <graphic>
+            <ImageView fitHeight="80.0" fitWidth="103.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assets/SettingsButton.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
