--- a/src/game/gui/FXML/GameScene.fxml
+++ b/src/game/gui/FXML/GameScene.fxml
@@ -13,31 +13,51 @@
             <Image url="@../assets/MainBackground.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="Lane2" fitHeight="150.0" fitWidth="1875.0" layoutX="26.0" layoutY="314.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../assets/LaneHug.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="Lane3" fitHeight="150.0" fitWidth="1875.0" layoutX="28.0" layoutY="470.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../assets/LaneHug.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="Lane4" fitHeight="150.0" fitWidth="1875.0" layoutX="16.0" layoutY="632.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../assets/LaneHug.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="Lane1" fitHeight="150.0" fitWidth="1875.0" layoutX="32.0" layoutY="153.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../assets/LaneHug.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="Lane5" fitHeight="150.0" fitWidth="1875.0" layoutX="12.0" layoutY="778.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../assets/LaneHug.png" />
-         </image>
-      </ImageView>
+      <AnchorPane fx:id="Lane1Pane" layoutX="81.0" layoutY="145.0" prefHeight="154.0" prefWidth="1828.0">
+         <children>
+            <ImageView fx:id="Lane1" fitHeight="150.0" fitWidth="1875.0" layoutX="-53.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assets/LaneHug.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="Lane2Pane" layoutX="79.0" layoutY="315.0" prefHeight="154.0" prefWidth="1828.0">
+         <children>
+            <ImageView fx:id="Lane2" fitHeight="150.0" fitWidth="1875.0" layoutX="-53.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assets/LaneHug.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="Lane3Pane" layoutX="83.0" layoutY="470.0" prefHeight="154.0" prefWidth="1828.0">
+         <children>
+            <ImageView fx:id="Lane3" fitHeight="150.0" fitWidth="1875.0" layoutX="-53.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assets/LaneHug.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="Lane4Pane" layoutX="82.0" layoutY="630.0" prefHeight="154.0" prefWidth="1828.0">
+         <children>
+            <ImageView fx:id="Lane4" fitHeight="150.0" fitWidth="1875.0" layoutX="-53.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assets/LaneHug.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="Lane5Pane" layoutX="103.0" layoutY="800.0" prefHeight="154.0" prefWidth="1828.0">
+         <children>
+            <ImageView fx:id="Lane5" fitHeight="150.0" fitWidth="1875.0" layoutX="-53.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assets/LaneHug.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
       <ImageView fx:id="Houses" fitHeight="770.0" fitWidth="214.0" layoutX="8.0" layoutY="144.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/Houses.png" />
