--- a/src/game/gui/FXML/GameScene.fxml
+++ b/src/game/gui/FXML/GameScene.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.gui.GameController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.gui.HardGameController">
    <children>
       <ImageView fx:id="MainBackground" fitHeight="826.0" fitWidth="1922.0" layoutX="195.0" layoutY="119.0" pickOnBounds="true" preserveRatio="true" scaleX="1.35" scaleY="1.35">
          <image>
@@ -63,7 +63,12 @@
             <Image url="@../assets/Houses.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="Wall5" fitHeight="199.0" fitWidth="94.0" layoutX="686.0" layoutY="723.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="Wall52" fitHeight="89.0" fitWidth="79.0" layoutX="701.0" layoutY="877.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assets/Wall52.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="Wall51" fitHeight="199.0" fitWidth="94.0" layoutX="686.0" layoutY="723.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/wallLast.png" />
          </image>
