--- a/src/game/gui/application.css
+++ b/src/game/gui/application.css
@@ -1,4 +1,4 @@
-#backButton, #muteButton, #startGame, #credits, #quitGame, #easyButton, #hardButton, #instructionsButton, #close {
+#backButton, #muteButton, #startGame, #credits, #quitGame, #easyButton, #hardButton, #instructionsButton, #close, #gameOverBackButton {
     -fx-text-fill: #FFF;
     -fx-background-color: transparent;
     -fx-border-color: rgba(255,255,255,0.5);
@@ -6,7 +6,7 @@
     -fx-text-size: 50px;
     -fx-font-family: "Oswald";
 }
-#muteButton, #backButton, #close{
+#muteButton, #backButton, #close, #gameOverBackButton{
     -fx-font-size: 30px;
 }
 
