--- a/src/game/gui/FXML/GameOverScene.fxml
+++ b/src/game/gui/FXML/GameOverScene.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane fx:id="gameOverPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-border-color: #424238; -fx-background-radius: 40px; -fx-border-width: 15px; -fx-border-radius: 30px; -fx-background-color: #e6dfcf;" stylesheets="@application.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.gui.GameOverController">
    <children>
-      <Label fx:id="gameOverTitle" alignment="CENTER" layoutX="259.0" layoutY="72.0" prefHeight="112.0" prefWidth="483.0" style="-fx-font-family: Oswald; -fx-font-size: 70; -fx-text-fill: #631E1E;" stylesheets="@application.css" text="Game Over" textFill="WHITE" />
+      <Label fx:id="gameOverTitle" alignment="CENTER" layoutX="259.0" layoutY="72.0" prefHeight="112.0" prefWidth="483.0" style="-fx-font-family: Oswald; -fx-font-size: 70; -fx-text-fill: #631E1E;" stylesheets="@../application.css" text="Game Over" textFill="WHITE" />
       <Label fx:id="finalScoreLabel" alignment="CENTER" layoutX="390.0" layoutY="220.0" prefHeight="78.0" prefWidth="221.0" style="-fx-font-family: Oswald; -fx-font-size: 40; -fx-text-fill: #631E1E;" stylesheets="@../application.css" text="Label">
          <graphic>
             <ImageView fitHeight="80.0" fitWidth="72.0" layoutY="-5.0" pickOnBounds="true" preserveRatio="true">
