added button graphic for automation
Automate button added

--- a/src/game/gui/FXML/GameScene.fxml
+++ b/src/game/gui/FXML/GameScene.fxml
@@ -190,7 +190,7 @@
          <graphic>
             <ImageView fitHeight="80.0" fitWidth="103.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../assets/PassTurnButton.png" />
+                  <Image url="@../assets/automateButton.png" />
                </image>
             </ImageView>
          </graphic>
